--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Expensify App</title>
     <link rel="icon" type="image/ico" href="/images/favicon.ico"/>
-    <link rel="stylesheet" type="text/css" href="/styles.css"/>
+    <link rel="stylesheet" type="text/css" href="/dist/styles.css"/>
 </head>
 <body>
     <div id="app"></div>
-    <script src="/bundle.js"></script>
+    <script src="/dist/bundle.js"></script>
 </body>
 </html>
